# test

./: mesh_endpoint.js  package-lock.json  package.json  server.js  test_cgal.cjs  test_mesh_gen.cjs  test_stitch.cjs  test_stitch_module.js
cpp/: CMakeLists.txt  mesh_gen.cpp  test_cgal.cpp
public/: axis_helper.js  boundary_drawer.js  camera_movement.js  cgal_mesher.js  index.html  main.js  mesh_generator.js  points_extractor.js  stitcher.js  style.css  triangle_deleter.js  type_toggles.js  via_solid.js
